resolved text overflow

--- a/src/components/organisms/Header/Header.mod.scss
+++ b/src/components/organisms/Header/Header.mod.scss
@@ -26,5 +26,6 @@
     position: fixed;
     right: 0;
     top: 44px;
-    background-color: #678865
+    background-color: #678865;
+    z-index: 50;
 }
