--- a/src/components/organisms/ListContainerView/ListContainerView.mod.scss
+++ b/src/components/organisms/ListContainerView/ListContainerView.mod.scss
@@ -27,3 +27,7 @@
 .footerLogo:hover {
   opacity: 1;
 }
+
+.active {
+  background-color: #E1EEFA;
+}
